--- a/btia_app/pubspec.yaml
+++ b/btia_app/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   camera: ^0.10.5+9
   path_provider: ^2.1.2
   path: ^1.9.0
+  provider: ^6.1.2
+  cross_file: ^0.3.4+1
+  go_router: ^13.2.3
 
 dev_dependencies:
   flutter_test:
