--- a/btia_app/pubspec.yaml
+++ b/btia_app/pubspec.yaml
@@ -38,9 +38,8 @@ dependencies:
     path_provider: ^2.1.2
     path: ^1.9.0
     provider: ^6.1.2
-    cross_file: ^0.3.4+1
     go_router: ^13.2.3
-    google_fonts: ^6.2.1
+    url_launcher: ^6.2.5
 
 dev_dependencies:
     flutter_test:
