--- a/btia_app/pubspec.yaml
+++ b/btia_app/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
     provider: ^6.1.2
     go_router: ^13.2.3
     url_launcher: ^6.2.5
+    http: ^1.2.1
+    http_parser: ^4.0.2
 
 dev_dependencies:
     flutter_test:
