--- a/btia_app/pubspec.yaml
+++ b/btia_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
     url_launcher: ^6.2.5
     http: ^1.2.1
     http_parser: ^4.0.2
+    intl: ^0.19.0
 
 dev_dependencies:
     flutter_test:
