--- a/btia_web/package.json
+++ b/btia_web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.554.0",
     "@types/node": "^20.12.7",
+    "@vercel/postgres": "^0.8.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
