--- a/btia_web/package.json
+++ b/btia_web/package.json
@@ -12,11 +12,14 @@
     "@aws-sdk/client-s3": "^3.554.0",
     "@types/node": "^20.12.7",
     "@vercel/postgres": "^0.8.0",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
