--- a/btia_app/pubspec.yaml
+++ b/btia_app/pubspec.yaml
@@ -1,5 +1,5 @@
 name: btia_app
-description: "A new Flutter project."
+description: "remotly send image"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.0.1+1
 
 environment:
     sdk: ">=3.3.2 <4.0.0"
@@ -43,8 +43,10 @@ dependencies:
     http: ^1.2.1
     http_parser: ^4.0.2
     intl: ^0.19.0
+    flutter_native_splash: ^2.4.0
 
 dev_dependencies:
+    flutter_launcher_icons: "^0.13.1"
     flutter_test:
         sdk: flutter
 
@@ -54,6 +56,13 @@ dev_dependencies:
     # package. See that file for information about deactivating specific lint
     # rules and activating additional ones.
     flutter_lints: ^3.0.0
+
+flutter_launcher_icons:
+    android: "app_icon"
+    image_path: "assets/app_icon.png"
+    min_sdk_android: 21 # android min sdk min:16, default 21
+    ios: true
+    remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
