--- a/btia_app/android/app/src/main/AndroidManifest.xml
+++ b/btia_app/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="jiwang.btia_app">
     <application
         android:label="출장사진 저장소"
         android:name="${applicationName}"
