--- a/btia_app/pubspec.yaml
+++ b/btia_app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
     http_parser: ^4.0.2
     intl: ^0.19.0
     flutter_native_splash: ^2.4.0
+    image_picker: ^1.1.0
 
 dev_dependencies:
     flutter_launcher_icons: "^0.13.1"
