--- a/btia_web/.gitignore
+++ b/btia_web/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# 빌드시 생기는 pwa관련 자바스크립트 파일
+public/sw.*
+public/workbox-*
+
 # dependencies
 /node_modules
 /.pnp
