--- a/btia_app/pubspec.yaml
+++ b/btia_app/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
     intl: ^0.19.0
     flutter_native_splash: ^2.4.0
     image_picker: ^1.1.0
+    percent_indicator: ^4.2.3
 
 dev_dependencies:
     flutter_launcher_icons: "^0.13.1"
