--- a/btia_app/pubspec.yaml
+++ b/btia_app/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
     image_picker: ^1.1.0
     percent_indicator: ^4.2.3
     package_info_plus: ^8.0.0
+    shared_preferences: ^2.2.3
 
 dev_dependencies:
     flutter_launcher_icons: "^0.13.1"
