업데이트 유도 모달 구현, 최신 버전 정보 api구현

--- a/btia_app/pubspec.yaml
+++ b/btia_app/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
     percent_indicator: ^4.2.3
     package_info_plus: ^8.0.0
     shared_preferences: ^2.2.3
+    image_gallery_saver: ^2.0.3
 
 dev_dependencies:
     flutter_launcher_icons: "^0.13.1"
