--- a/btia_app/android/app/src/main/AndroidManifest.xml
+++ b/btia_app/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     <application
         android:label="출장사진 저장소"
         android:name="${applicationName}"
-        android:icon="@mipmap/app_icon">
+        android:icon="@mipmap/app_icon"
+        android:requestLegacyExternalStorage="true"
+        >
         <activity
             android:name=".MainActivity"
             android:exported="true"
