--- a/btia_app/ios/Runner/Info.plist
+++ b/btia_app/ios/Runner/Info.plist
@@ -46,9 +46,11 @@
 		<key>UIApplicationSupportsIndirectInputEvents</key>
 		<true/>
 		<key>NSCameraUsageDescription</key>
-		<string>앱 사용을 위해 필수입니다</string>
-		<key>NSPhotoLibraryUsageDescription </key>
+		<string>앱 사용을 위해 필수적으로 필요합니다</string>
+		<key>NSPhotoLibraryUsageDescription</key>
 		<string>기존에 찍어둔 사진들을 서버로 보내기위해 필요합니다</string>
+		<key>NSPhotoLibraryAddUsageDescription</key>
+		<string>어플로 촬영한 사진을 저장하기 위해 필요합니다</string>
 		<key>LSApplicationQueriesSchemes</key>
 		<array>
 			<string>https</string>
