--- a/btia_web/package.json
+++ b/btia_web/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-s3": "^3.554.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.12.7",
+    "@vercel/analytics": "^1.2.2",
     "@vercel/postgres": "^0.8.0",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
