--- a/btia_web/vercel.json
+++ b/btia_web/vercel.json
@@ -1,8 +1,8 @@
 {
     "crons": [
       {
-        "path": "/cronjob",
-        "schedule": "0 1 * * *"
+        "path": "cron",
+        "schedule": "0 2 * * *"
       }
     ]
   }
