--- a/btia_web/package.json
+++ b/btia_web/package.json
@@ -15,6 +15,7 @@
     "@vercel/analytics": "^1.2.2",
     "@vercel/postgres": "^0.8.0",
     "file-saver": "^2.0.5",
+    "firebase": "^10.12.1",
     "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
     "next": "14.1.4",
