--- a/btia_app/ios/Runner/Info.plist
+++ b/btia_app/ios/Runner/Info.plist
@@ -37,6 +37,8 @@
 	<string>어플로 촬영한 사진을 저장하기 위해 필요합니다</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>기존에 찍어둔 사진들을 서버로 보내기위해 필요합니다</string>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>개인별 사진 분류를 위해 개인 코드가 필요합니다</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
