--- a/btia_app/ios/Runner/Info.plist
+++ b/btia_app/ios/Runner/Info.plist
@@ -31,6 +31,8 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>GADApplicationIdentifier</key>
+	<string>ca-app-pub-9383754596343414~1585948099</string>
 	<key>NSCameraUsageDescription</key>
 	<string>본 앱은 사진촬영 앱으로 앱 사용을 위해 필요합니다</string>
 	<key>NSPhotoLibraryUsageDescription</key>
