--- a/btia_app/pubspec.yaml
+++ b/btia_app/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
     package_info_plus: ^8.0.0
     shared_preferences: ^2.2.3
     image_gallery_saver: ^2.0.3
+    google_mobile_ads: ^5.1.0
 
 dev_dependencies:
     flutter_launcher_icons: "^0.13.1"
