--- a/btia_app/android/app/src/main/AndroidManifest.xml
+++ b/btia_app/android/app/src/main/AndroidManifest.xml
@@ -53,5 +53,6 @@
             <data android:scheme="https" />
         </intent>
     </queries>
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
