--- a/btia_app/pubspec.yaml
+++ b/btia_app/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+16
+version: 1.0.0+17
 
 environment:
     sdk: ">=3.3.2 <4.0.0"
@@ -51,6 +51,7 @@ dependencies:
     image_gallery_saver: ^2.0.3
     google_mobile_ads: ^5.1.0
     soundpool: ^2.4.1
+    native_camera_sound: ^0.0.3
 
 dev_dependencies:
     flutter_launcher_icons: "^0.13.1"
